feat: all endpoints and authmiddleware ready
